--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "waterline-schema",
+  "name": "postman-waterline-schema",
   "description": "The core schema builder used in the Waterline ORM.",
   "version": "0.1.18-postman.3",
   "contributors": [
@@ -23,8 +23,8 @@
     "waterline",
     "active-record"
   ],
-  "repository": "git://github.com/balderdashy/waterline-schema.git",
-  "homepage": "http://github.com/balderdashy/waterline-schema",
+  "repository": "git://github.com/postmanlabs/postman-waterline-schema.git",
+  "homepage": "http://github.com/postmanlabs/postman-waterline-schema",
   "main": "lib/waterline-schema.js",
   "scripts": {
     "test": "make test",
@@ -36,10 +36,10 @@
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/balderdashy/waterline-schema/blob/master/LICENSE.md"
+      "url": "https://github.com/postmanlabs/postman-waterline-schema/blob/master/LICENSE.md"
     }
   ],
   "bugs": {
-    "url": "https://github.com/balderdashy/waterline-schema/issues/new"
+    "url": "https://github.com/postmanlabs/waterline-schema/issues/new"
   }
 }
